force-app/main/default/objects/Dummy31__c/Dummy31__c.object-meta.xml
<CustomObject>
    <label>Dummy31</label>
    <nameField>
        <label>Dummy31 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy31</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>