force-app/main/default/objects/Dummy31__c/fields/FooBar023__c.field-meta.xml
<CustomField>
    <fullName>FooBar023__c</fullName>
    <label>FooBar023</label>
    <length>255</length>
    <type>Text</type>
</CustomField>