force-app/main/default/objects/Dummy31__c/fields/FooBar035__c.field-meta.xml
<CustomField>
    <fullName>FooBar035__c</fullName>
    <label>FooBar035</label>
    <length>255</length>
    <type>Text</type>
</CustomField>