force-app/main/default/objects/Dummy31__c/fields/FooBar041__c.field-meta.xml
<CustomField>
    <fullName>FooBar041__c</fullName>
    <label>FooBar041</label>
    <length>255</length>
    <type>Text</type>
</CustomField>